# Coala

./: Cargo.toml  README.md  bit.coala  bool.coala  compiled.csv  compiled_edges.csv  compiled_labels.csv  ideas.txt  main.coala  simple.coala  test.coala  wip.coala
coala_lib_std/: assert.coala  bit.coala  bool.coala  inline.coala  int.coala  int_be.coala  sha256.coala
src/: atom_tree.rs  atom_tree_to_graph.rs  atom_tree_translate.rs  block_parser.rs  code_location.rs  compilation.rs  diagnostic.rs  export.rs  graph_label_set.rs  graph_maker.rs  graph_structure_type.rs  label.rs  lexer.rs  lib.rs  main.rs  parser.rs  symbol_table.rs  syntax.rs  token.rs  type_stream.rs
src/compiler/: atom_tree.rs  atom_tree_to_expr.rs  atom_tree_to_graph.rs  atom_tree_translate.rs  block_parser.rs  code_location.rs  compilation.rs  export.rs  file_reader.rs  graph_maker.rs  grouping_parser.rs  lexer.rs  lib_embed.rs  mod.rs  parser.rs  scope.rs  settings.rs  string_file_reader.rs  syntax.rs  token.rs  type_stream.rs  typecheck.rs
