[package]
name = "coala"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies]
wasm-bindgen = "0.2"
enum-as-inner = "0.6.0"
num-bigint = "0.4.6"
phf = { version = "0.11.2", features = ["macros"] }
rust-embed = "8.7.1"
